--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "express": "~4.15.2",
     "jsonwebtoken": "^8.0.0",
     "morgan": "~1.8.1",
+    "multer": "^1.3.0",
     "mysql": "^2.14.1",
     "serve-favicon": "~2.4.2"
   },
