--- a/segment/package.json
+++ b/segment/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.4.2",
     "vue-quill-editor": "^2.3.2",
     "vue-router": "^2.7.0",
+    "vuelidate": "^0.6.1",
     "vuex": "^2.4.0"
   },
   "devDependencies": {
