--- a/segment/package.json
+++ b/segment/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.4.2",
     "vue-quill-editor": "^2.3.2",
     "vue-router": "^2.7.0",
+    "vue-star-rate": "^1.0.6",
     "vuelidate": "^0.6.1",
     "vuex": "^2.4.0"
   },
@@ -47,6 +48,7 @@
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.0.4",
+    "vue-star-rate": "^1.0.6",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.4.2",
     "webpack": "^2.6.1",
